# nexus-optimization

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
hooks/: README.md
hooks/claude/: rtk-rewrite.sh  test-rtk-rewrite.sh
hooks/cursor/: rtk-rewrite.sh
hooks/hermes/rtk-rewrite/: __init__.py
hooks/opencode/: rtk.ts
hooks/pi/: README.md  rtk.ts
marketing/: README.md  nexus-gain-showcase.html
src/: main.rs
src/analytics/: gain.rs  session_cmd.rs
src/cmds/cloud/: container.rs
src/cmds/git/: README.md  git.rs
src/cmds/ruby/: rspec_cmd.rs  rubocop_cmd.rs
src/cmds/system/: constants.rs  find_cmd.rs  grep_cmd.rs  pipe_cmd.rs  read.rs  wc_cmd.rs
src/core/: config.rs  constants.rs  mod.rs  read_cache.rs  runner.rs  stream.rs  tee.rs  telemetry_cmd.rs  toml_filter.rs  tracking.rs  utils.rs
src/discover/: provider.rs  registry.rs  report.rs  rules.rs
src/filters/: ansible-playbook.toml  brew-install.toml  bundle-install.toml  composer-install.toml  dotnet-build.toml  gcc.toml  gradle.toml  helm.toml  make.toml  mix-compile.toml  mvn-build.toml  nx.toml  pio-run.toml  poetry-install.toml  pre-commit.toml  swift-build.toml  terraform-plan.toml  tofu-plan.toml  trunk-build.toml  turbo.toml  uv-sync.toml  xcodebuild.toml
src/hooks/: README.md  constants.rs  hook_check.rs  hook_cmd.rs  init.rs  integrity.rs  permissions.rs  rewrite_cmd.rs  trust.rs
src/learn/: report.rs
